--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://MickKrishtopa.github.io/react-mesto-auth",
+  "homepage": "http://mickkrishtopa.nomoredomains.work",
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
