--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -19,6 +19,13 @@
 .env.production.local
 .env
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+**.log
+/error.log
+error.log
+/request.log
+request.log
